Fix post submit button alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -15,6 +15,21 @@
     display: none;
 }
 
+/* Create Post Styling */
+
+.post_content {
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;  
+}
+
+.post_submit {
+    align-self: flex-end;
+    text-align: right;
+    
+}
+
+/* Saved Post Styling */
 .comment {
     flex-direction: column;
     display: flex;
@@ -26,6 +41,8 @@
     text-align: right;
     width: 100%;
 }
+
+
 
 .music_info {
     padding: 0;
